--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@ sanctuary for stray animals.
 <h3>My Hobbies</h3>
 <ul>
 <li>doing origami and crafts</li>
-<li>painting
+<li>painting</li>
+<li>Erri pakoda</li>
+
